--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,15 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
 python-multipart==0.0.22
+bcrypt=4.0.1
+ecdsa==0.19.1
+limits==5.8.0
+packaging==26.0
+passlib==1.7.4
+python-jose==3.5.0
+six==1.17.0
+slowapi==0.1.9
+wrapt==2.1.1   
 
 # ---- External APIs / stats ----
 requests==2.32.5
