--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,7 +20,7 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
 python-multipart==0.0.22
-bcrypt=4.0.1
+bcrypt==4.0.1
 ecdsa==0.19.1
 limits==5.8.0
 packaging==26.0
@@ -33,4 +33,4 @@ wrapt==2.1.1
 # ---- External APIs / stats ----
 requests==2.32.5
 PyGithub==2.8.1
-google-genai=1.62.0
+google-genai==1.62.0
